--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-weight: 600;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  list-style: none;
 }
 
 .container {
@@ -14,6 +15,7 @@
   gap: 10px;
   padding: 10px;
   box-sizing: border-box;
+  display: flex;
 }
 .navbar-container {
   background-color: #1f2b3b;
@@ -22,6 +24,7 @@
   align-items: center;
   justify-content: space-around;
   border-radius: 10px;
+
   gap: 50px;
 }
 .icons {
@@ -61,7 +64,6 @@
   flex-direction: column;
 }
 .main {
-  flex: 7;
   display: flex;
   flex-direction: column;
   color: #d4d3d3;
@@ -167,7 +169,6 @@
   padding-inline-end: 20vh;
 }
 .daily {
-  flex: 3;
   color: #d4d3d3;
   display: flex;
   flex-direction: column;
@@ -196,4 +197,35 @@
 }
 .weekly-weather-figure {
   max-height: 20px;
+}
+
+.graph {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+}
+
+.graph-container {
+  display: flex;
+  align-items: flex-end;
+  height: 200px;
+  width: 400px;
+  border-left: 2px solid #333;
+  border-bottom: 2px solid #333;
+  padding: 10px;
+  gap: 5px;
+}
+.graph-info-container {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.bar {
+  width: 30px; /* Set a fixed width for the bars */
+  margin: 0 5px; /* Add some margin for spacing */
+  display: flex; /* Use flex to center text */
+  align-items: flex-end; /* Align text to the bottom of the bar */
+  color: white; /* Change text color for visibility */
+  justify-content: center; /* Center text horizontally */
 }
